# gar_bot

./: pyproject.toml
gar_bot/: main.py  trxids.txt
