[tool.poetry]
name = "gar-bot"
version = "0.1.0"
description = ""
authors = ["hubaib <hubaibm9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nodriver = "^0.28rc1"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
